[gd_scene load_steps=4 format=3 uid="uid://c4cqdt2hdmyme"]

[ext_resource type="FontFile" uid="uid://bjpcq3eamka67" path="res://omelette_font/assets/ttf/om_thick_plain.ttf" id="1_dy3ie"]
[ext_resource type="Script" uid="uid://d3gey34mpnbkd" path="res://scripts/gameover.gd" id="2_2mkfd"]

[sub_resource type="Theme" id="Theme_h8i2o"]
default_font = ExtResource("1_dy3ie")
default_font_size = 24

[node name="Gameover" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_h8i2o")
script = ExtResource("2_2mkfd")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -228.0
offset_top = 140.0
offset_right = 228.0
offset_bottom = 218.0
grow_horizontal = 2
text = "You beat the game!

Your finished time:"
horizontal_alignment = 1

[node name="FinishTime" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.0
offset_top = -54.0
offset_right = 108.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
text = "00:00:000"
horizontal_alignment = 1

[node name="MainMenuButton" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -112.0
offset_top = -193.0
offset_right = 112.0
offset_bottom = -161.0
grow_horizontal = 2
grow_vertical = 0
text = "Main Menu"

[node name="NewGameButton" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -260.0
offset_right = 100.0
offset_bottom = -228.0
grow_horizontal = 2
grow_vertical = 0
text = "New Game"

[connection signal="pressed" from="ColorRect/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="ColorRect/NewGameButton" to="." method="_on_new_game_button_pressed"]
